[gd_scene load_steps=5 format=3 uid="uid://cg1he6rtw4thx"]

[ext_resource type="Script" path="res://target.gd" id="1_47u24"]
[ext_resource type="Script" path="res://follower.gd" id="2_g0r5a"]
[ext_resource type="Script" path="res://second_order_dynamics.gd" id="2_ovvby"]
[ext_resource type="Script" path="res://graph.gd" id="4_cnp45"]

[node name="Node2D" type="Node2D"]

[node name="Follower" type="Node2D" parent="."]
script = ExtResource("2_g0r5a")

[node name="Target" type="Node2D" parent="."]
script = ExtResource("1_47u24")

[node name="SecondOrderDynamics" type="Node" parent="Target"]
script = ExtResource("2_ovvby")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 301.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2

[node name="f_slider" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Control/VBoxContainer/f_slider"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="Control/VBoxContainer/f_slider"]
layout_mode = 2
text = "F"

[node name="z_slider" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Control/VBoxContainer/z_slider"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
value = 0.2

[node name="Label" type="Label" parent="Control/VBoxContainer/z_slider"]
layout_mode = 2
text = "F"

[node name="r_slider" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Control/VBoxContainer/r_slider"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -2.5
max_value = 2.5
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="Control/VBoxContainer/r_slider"]
layout_mode = 2
text = "F"

[node name="Graph" type="Node2D" parent="."]
script = ExtResource("4_cnp45")

[node name="SecondOrderDynamics" type="Node" parent="Graph"]
script = ExtResource("2_ovvby")
_z = 0.2
_r = 1.0
